--- a/public/room-landing.html
+++ b/public/room-landing.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <title>Boven de Balie Meetingroom #1</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <link rel="stylesheet" href="/room.css">
+  <link rel="stylesheet" href="/room-landing.css">
   <meta http-equiv="refresh" content="1;URL=/auth/google">
 </head>
 <body>
-  <p>Book this meeting room!</p>
-  <p>Please wait while you're redirected</p>
+  <section id="header">Book this meeting room!</section>
+  <p id="please-wait">Please wait while you're redirected...</p>
 </body>
 </html>
