--- a/public/room-landing.html
+++ b/public/room-landing.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Boven de Balie Meetingroom #1</title>
+  <title>{{name}}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <link rel="stylesheet" href="/room-landing.css">
   <meta http-equiv="refresh" content="1;URL=/auth/google">
